test(perf): verify nonblocking logging